[package]
name = "mut-rc"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/mut-rc"
documentation = "https://docs.rs/mut-rc"
description = "Temporarily mutable `Rc<T>` that decays into `Rc<T>`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
